# Unige_code

./: README.md
23-24/ALAN/errori/: 2esercizio.cpp  errori2es.txt  erroriRelazione.txt  erroriout.txt  makefile  output.txt
23-24/ALAN/sistemi/: main.cpp  punto1.cpp  punto2.cpp  punto3.cpp  sistemiRelazione.txt  sistemiout.txt
23-24/APA/1 Las Vegas QuickSort/: LVquicksort.py
23-24/APA/3 Accordo bizantino Monte Carlo/: MCbizantino.py
23-24/APA/Uno o tre/: MCMatrixMultiplicationVerifier.py  MR-bugiardi Carmichael.py  fileconfronter.py
23-24/BD/LaboratoriBD/: Labo3.sql  Labo4.sql  Labo5.sql
23-24/BD/progettoBD/: SchemaER.drawio
23-24/LPO/proggeto modified/: README.md
23-24/SETI/incapache/: incApache.h
24-25/FCG/GLSL/: 01_sphere_normal.glsl  03_sphere_complete_shading.glsl  hello_world_glslCanvas.glsl
24-25/FCG/Ray tracing/: CMakeLists.txt
24-25/FCG/Ray tracing/src/: Raytracingshader.frag  main.cpp
24-25/FCG/RayTracing/: 09_Ray_Tracing.glsl  README.md  ratracingfinale.glsl
24-25/PCAD/: codiceExa.txt
ALAN/Lab1/: 2esercizio.cpp
ALAN/errori/: 2esercizio.cpp  3esercizio.cpp
ALAN/lab2/: 1esercizio.cpp  2esercizio.cpp  3esercizio.cpp
ALAN/sistemi/: 1esercizio.cpp  2esercizio.cpp  3esercizio.cpp  main.cpp  matrix.h  punto2.cpp  punto3.cpp
BD/LaboratoriBD/: Labo2.sql  labo6.sql  labo7.sql  labo8.sql  labo9.sql
BD/progettoBD/: SchemaERRistrutturato.drawio
LPO/progetto2024/: .gitignore
SETI/incapache/: incApache_aux.c  incApache_http.c  incApache_main.c  incApache_threads.c
SETI/microbash/: microbash.c
SETI/pingpong/: .gitignore
(+770 files in other folders)
